<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtInput"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="0.0"
        android:textSize="65px"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <Button
        android:id="@+id/btn1"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_1"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_2"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/txtInput"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_3"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/txtInput"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_4"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />
    <Button
        android:id="@+id/btn5"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_5"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />
    <Button
        android:id="@+id/btn6"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_6"
        android:textSize="65px"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btnSub"
        app:layout_constraintStart_toEndOf="@+id/btn5" />
    <Button
        android:id="@+id/btn7"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_7"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />
    <Button
        android:id="@+id/btn8"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_8"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />
    <Button
        android:id="@+id/btn9"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/_9"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btnSqrt"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />
    <Button
        android:id="@+id/btn0"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:text="@string/_0"
        android:textSize="65px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/btnDot"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/dot"
        android:textSize="65px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/plus"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btnSub"
        app:layout_constraintEnd_toStartOf="@+id/btnMult"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />
    <Button
        android:id="@+id/btnMult"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/multiply"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btnDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />
    <Button
        android:id="@+id/btnSub"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/subtract"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btnSqrt"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />
    <Button
        android:id="@+id/btnDiv"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:text="@string/divide"
        android:textSize="65px"
        app:layout_constraintBottom_toTopOf="@+id/btnSqrt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSub"
        app:layout_constraintTop_toBottomOf="@+id/btnMult" />
    <Button
        android:id="@+id/btnSqrt"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:text="@string/square_root"
        android:textSize="50px"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnSub" />
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:text="@string/equal"
        android:textSize="70px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>